iO for TM and WE

--- a/main.tex
+++ b/main.tex
@@ -143,8 +143,18 @@ keys]{cryptocode}
 \newcommand{\machine}[1]{\mathsf{#1}}
 \newcommand{\lang}{\mathsf{L}}
 
+
+%ciphertext
+\newcommand{\ciphertext}{\mathsf{ct}}
+
+%Commitment
 \newcommand{\com}{\mathsf{com}}
 
+%Obfuscation
+\newcommand{\iOM}{\mathsf{iOM}}
+
+%Witness Encryption
+\newcommand{\WE}{\mathsf{WE}}
 
 
 \begin{document}
@@ -181,6 +191,7 @@ Collect definitions of cryptographic primitives so that it is easy to copy and u
 \chapter{Secure Computation}
 
 \chapter{Obfuscation}
+	\input{obfuscation}
 
 
 
