--- a/main.tex
+++ b/main.tex
@@ -156,6 +156,11 @@ keys]{cryptocode}
 %Witness Encryption
 \newcommand{\WE}{\mathsf{WE}}
 
+\newcommand{\NIWI}{\mathsf{NIWI}}
+
+\newcommand{\prove}{\mathsf{Prove}}
+\renewcommand{\verify}{\mathsf{Verify}}
+
 
 \begin{document}
 	
