Updated gitignore to push PDF as well

--- a/main.tex
+++ b/main.tex
@@ -33,35 +33,35 @@
 \usepackage{bm}
 \usepackage{enumitem}
 
-\usepackage[most]{tcolorbox}
+% \usepackage[most]{tcolorbox}
 
-\newtcolorbox{defbox}[1][]
-{
-	sharp corners,
-	colback=cyan!7!white,
-	breakable,
-	enhanced,
-	#1,
-}
+% \newtcolorbox{defbox}[1][]
+% {
+% 	sharp corners,
+% 	colback=cyan!7!white,
+% 	breakable,
+% 	enhanced,
+% 	#1,
+% }
 
 
-\newtcolorbox{thmbox}[1][]
-{
-	sharp corners,
-	colback=green!30!white,
-	breakable,
-	enhanced,
-	#1,
-}
+% \newtcolorbox{thmbox}[1][]
+% {
+% 	sharp corners,
+% 	colback=green!30!white,
+% 	breakable,
+% 	enhanced,
+% 	#1,
+% }
 
-\newtcolorbox{notebox}[1][]
-{
-	sharp corners,
-	colback=red!5!white,
-	breakable,
-	enhanced,
-	#1,
-}
+% \newtcolorbox{notebox}[1][]
+% {
+% 	sharp corners,
+% 	colback=red!5!white,
+% 	breakable,
+% 	enhanced,
+% 	#1,
+% }
 
 
 
@@ -83,6 +83,9 @@
 
 \usepackage{imakeidx}
 \makeindex
+
+
+
 
 
 
@@ -113,6 +116,7 @@ keys]{cryptocode}
 \renewcommand\labelitemi{--}
 
 %\usepackage{geometry}
+
 
 \usepackage[pdftex,bookmarks=true,pdfstartview=FitH,colorlinks,linkcolor=Cerulean,filecolor=Cerulean,citecolor=NavyBlue,urlcolor=Cerulean]{hyperref}
 \pagestyle{plain}
